--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,9 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <serenity.version>1.8.3</serenity.version>
-        <serenity.cucumber.version>1.6.6</serenity.cucumber.version>
-        <webdriver.driver>chrome</webdriver.driver>
+        <serenity.version>2.0.55</serenity.version>
+        <serenity.cucumber.version>1.9.39</serenity.cucumber.version>
+        <webdriver.driver>firefox</webdriver.driver>
     </properties>
 
     <repositories>
