--- a/serenity.properties
+++ b/serenity.properties
@@ -1,5 +1,7 @@
 # Define the default driver
-webdriver.driver=chrome
+webdriver.driver=firefox
+
+webdriver.gecko.driver = geckodriver.exe
 
 webdriver.chrome.driver=chromedriver.exe
 
